// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator creates the out put with the correct service name 1`] = `
"// @flow

import * as actions from './actions'
import * as actionTypes from './action-types'
import * as apiClient from './api-client'

const grpcService = {
  actions,
  actionTypes,
  apiClient
}

module.exports = grpcService"
`;

exports[`template creates template 1`] = `
"// @flow

import * as actions from './actions'
import * as actionTypes from './action-types'
import * as apiClient from './api-client'

const serviceName123 = {
  actions,
  actionTypes,
  apiClient
}

module.exports = serviceName123"
`;
